--- a/ifonline/package.json
+++ b/ifonline/package.json
@@ -19,9 +19,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^5.2.0",
     "expo": "^20.0.0",
+    "native-base": "^2.3.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-navigation": "^1.0.0-beta.11",
     "tcomb-form-native": "^0.6.9"
   }
 }
